example_test/type.go
package main

import (
	"fmt"
	. "github.com/shaalx/sstruct/structs"
	// "reflect"
)

type Structs_type Structs

func main() {
	itype(Structs)
}

func itype(t interface{}) {
	// typ := reflect.TypeOf(t)
	// fmt.Println(typ)
	// error

	// i := new(t)
	// fmt.Println(i)
	// error

	// ss := Structs(t{})
	// fmt.Println(ss)
	// error
}
